--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,10 @@
         android:theme="@style/Theme.MedTimer"
         tools:targetApi="31">
         <activity
-            android:name=".MedicineActivity"
+            android:name=".EditMedicine"
+            android:exported="false" />
+        <activity
+            android:name=".AddMedicine"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
