Added reminder scheduler Added capsule.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         <service
             android:name=".DismissService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="false" />
         <service
             android:name=".TakenService"
             android:enabled="true"
@@ -32,7 +32,6 @@
             android:theme="@style/Theme.MedTimer">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
