--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -22,5 +22,7 @@ jobs:
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+      - name: Run unit tests
+        run: ./gradlew test
       - name: Build with Gradle
         run: ./gradlew build
