--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,3 +26,10 @@ jobs:
         run: ./gradlew test
       - name: Build with Gradle
         run: ./gradlew build
+      - name: Release bundle
+        run: ./gradlew bundleRelease
+      - name: Upload App Bundle
+        uses: actions/upload-artifact@v4
+        with:
+          name: aab
+          path: app/build/outputs/bundle/release/
