--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
@@ -13,8 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/capsule"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MedTimer"
-        tools:targetApi="33">
+        android:theme="@style/Theme.MedTimer">
         <service
             android:name=".DismissService"
             android:enabled="true"
