--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:roundIcon="@mipmap/logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MedTimer">
+        <activity
+            android:name=".ColorPicker"
+            android:exported="false" />
+
         <service
             android:name=".ReminderSchedulerService"
             android:enabled="true"
@@ -28,6 +32,7 @@
             android:theme="@style/Theme.MedTimer">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
