Color picker as dialog

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
         android:theme="@style/Theme.MedTimer">
         <activity
             android:name=".ColorPicker"
-            android:exported="false" />
+            android:excludeFromRecents="true"
+            android:exported="false"
+            android:theme="@style/Theme.Material3.DayNight.Dialog" />
 
         <service
             android:name=".ReminderSchedulerService"
