--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,10 +1,13 @@
 name: Android CI
 
 on:
-  push:
-    branches: [ "main" ]
+  workflow_dispatch:
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
+  push:
+    tags:
+      - '*'
 
 jobs:
   build:
@@ -25,3 +28,29 @@ jobs:
         run: ./gradlew test
       - name: Build with Gradle
         run: ./gradlew build
+      - name: Release bundle
+        if: startsWith(github.ref, 'refs/tags/v')
+        run: ./gradlew bundleRelease
+      - name: Sign AAB
+        if: startsWith(github.ref, 'refs/tags/v')
+        id: sign_aab
+        uses: r0adkll/sign-android-release@v1
+        with:
+          releaseDirectory: app/build/outputs/bundle/release
+          signingKeyBase64: ${{ secrets.SIGNING_KEYSTORE }}
+          alias: ${{ secrets.SIGNING_ALIAS }}
+          keyStorePassword: ${{ secrets.SIGNING_KEYSTORE_PASSWORD }}
+          keyPassword: ${{ secrets.SIGNING_ALIAS_PASSWORD }}
+      - name: Upload App Bundle
+        if: startsWith(github.ref, 'refs/tags/v')
+        uses: actions/upload-artifact@v1
+        with:
+          name: aab
+          path: ${{steps.sign_aab.outputs.signedReleaseFile}}
+      - name: Create Release
+        if: startsWith(github.ref, 'refs/tags/v')
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: "*.msix,*.msi,*.zip"
+          generateReleaseNotes: true
+          draft: true
