Fixes for GitHub action

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,9 +17,9 @@ jobs:
     permissions: write-all
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
@@ -54,6 +54,6 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/v')
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "*.msix,*.msi,*.zip"
+          artifacts: "app/build/outputs/bundle/release/*.aab"
           generateReleaseNotes: true
           draft: true
