--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,7 +24,7 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: gradle
-
+      - uses: gradle/actions/setup-gradle@v3
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Run unit tests
