--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -27,6 +27,7 @@ jobs:
       - uses: gradle/actions/setup-gradle@v3
         with:
           dependency-graph: generate-and-submit
+          gradle-version: 8.4
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Run unit tests
