--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -52,6 +52,22 @@ jobs:
         with:
           name: aab
           path: ${{steps.sign_aab.outputs.signedReleaseFile}}
+      - name: Sign APK
+        if: startsWith(github.ref, 'refs/tags/v')
+        id: sign_apk
+        uses: r0adkll/sign-android-release@v1
+        with:
+          releaseDirectory: app/build/outputs/apk/release
+          signingKeyBase64: ${{ secrets.SIGNING_KEYSTORE }}
+          alias: ${{ secrets.SIGNING_ALIAS }}
+          keyStorePassword: ${{ secrets.SIGNING_KEYSTORE_PASSWORD }}
+          keyPassword: ${{ secrets.SIGNING_ALIAS_PASSWORD }}
+      - name: Upload App Package
+        if: startsWith(github.ref, 'refs/tags/v')
+        uses: actions/upload-artifact@v1
+        with:
+          name: apk
+          path: ${{steps.sign_apk.outputs.signedReleaseFile}}
       - name: Create Release
         if: startsWith(github.ref, 'refs/tags/v')
         uses: ncipollo/release-action@v1
