--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -56,6 +56,7 @@ jobs:
         shell: bash
         run: |
           BUILD_TOOL_VERSION=$(ls /usr/local/lib/android/sdk/build-tools/ | tail -n 1)
+          echo "BUILD_TOOL_VERSION=$BUILD_TOOL_VERSION" >> $GITHUB_ENV
       - name: Sign APK
         id: sign_apk
         uses: r0adkll/sign-android-release@v1
