--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,6 +12,7 @@ on:
       - '*'
 env:
   APK_RELEASE_DIRECTORY: app/build/outputs/apk/release
+  AAB_RELEASE_DIRECTORY: app/build/outputs/bundle/release
   BUILD_TOOLS_HOME: /usr/local/lib/android/sdk/build-tools
 
 
@@ -41,20 +42,21 @@ jobs:
         run: ./gradlew bundleRelease
 
       - name: Sign AAB
-        id: sign_aab
-        uses: r0adkll/sign-android-release@v1
-        with:
-          releaseDirectory: app/build/outputs/bundle/release
-          signingKeyBase64: ${{ secrets.SIGNING_KEYSTORE }}
-          alias: ${{ secrets.SIGNING_ALIAS }}
-          keyStorePassword: ${{ secrets.SIGNING_KEYSTORE_PASSWORD }}
-          keyPassword: ${{ secrets.SIGNING_ALIAS_PASSWORD }}
+        run: |
+          echo $SIGNING_KEY > $AAB_RELEASE_DIRECTORY/signingKey.jks
+          jarsigner -keystore $AAB_RELEASE_DIRECTORY/signingKey.jks -storepass $KEY_STORE_PASSWORD \
+            -keypass $KEY_PASSWORD $AAB_RELEASE_DIRECTORY/MedTimer-release.aab
+        env:
+          SIGNING_KEY: ${{ secrets.SIGNING_KEYSTORE }}
+          ALIAS: ${{ secrets.SIGNING_ALIAS }}
+          KEY_STORE_PASSWORD: ${{ secrets.SIGNING_KEYSTORE_PASSWORD }}
+          KEY_PASSWORD: ${{ secrets.SIGNING_ALIAS_PASSWORD }}
       - name: Upload App Bundle
         if: startsWith(github.ref, 'refs/tags/v')
         uses: actions/upload-artifact@v1
         with:
           name: aab
-          path: ${{steps.sign_aab.outputs.signedReleaseFile}}
+          path: $AAB_RELEASE_DIRECTORY/MedTimer-release.aab
 
       - name: Setup build tool version variable
         shell: bash
@@ -68,13 +70,14 @@ jobs:
           echo $SIGNING_KEY > $APK_RELEASE_DIRECTORY/signingKey.jks
           $BUILD_TOOLS_PATH/apksigner sign --ks $APK_RELEASE_DIRECTORY/signingKey.jks --ks-key-alias $ALIAS \
             --ks-pass pass:$KEY_STORE_PASSWORD --key-pass pass:$KEY_PASSWORD \
-            --out $APK_RELEASE_DIRECTORY/MedTimer-release-signed.apk
+            --out $APK_RELEASE_DIRECTORY/MedTimer-release-signed.apk \
+            $APK_RELEASE_DIRECTORY/MedTimer-release-unsigned-aligned.apk
         env:
           SIGNING_KEY: ${{ secrets.SIGNING_KEYSTORE }}
           ALIAS: ${{ secrets.SIGNING_ALIAS }}
           KEY_STORE_PASSWORD: ${{ secrets.SIGNING_KEYSTORE_PASSWORD }}
           KEY_PASSWORD: ${{ secrets.SIGNING_ALIAS_PASSWORD }}
-          BUILD_TOOLS_VERSION: ${{ env.BUILD_TOOL_VERSION }}
+          BUILD_TOOLS_PATH: ${{ env.BUILD_TOOLS_PATH }}
       - name: Upload App Package
         if: startsWith(github.ref, 'refs/tags/v')
         uses: actions/upload-artifact@v1
