Fixed menu handling

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
         android:roundIcon="@mipmap/logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MedTimer">
+        <activity
+            android:name=".PreferencesActivity"
+            android:exported="false"
+            android:label="@string/tab_settings" />
 
         <service
             android:name=".ReminderSchedulerService"
