Added button for logging a manual dose (#55)
* Added button for logging a manual dose

* Fixed theme switch

* Bumped version to v1.5.0

* Use single threaded work manager

* Scroll to top when adding a new reminder event

* Store updates

* Naming optimizations

* Fixed amount text box texts

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
+            android:launchMode="singleInstance"
             android:theme="@style/Theme.MedTimer">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -78,6 +79,10 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths" />
         </provider>
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            tools:node="remove" />
     </application>
 
 </manifest>
