--- a/tests.yml
+++ b/tests.yml
@@ -1,9 +1,9 @@
-android-pixel-7:
+medium-phone-arm:
   type: instrumentation
   app: app/build/outputs/apk/debug/MedTimer-debug.apk
   test: app/build/outputs/apk/androidTest/debug/MedTimer-debug-androidTest.apk
   device:
-    - model: panther
+    - model: MediumPhone.arm
       version: 34
       locale: 'en'
       orientation: portrait
