--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,6 +19,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - name: Set AnyChart license
+        uses: Mudlet/xmlstarlet-action@master
+        with:
+          args:
+            ed -L --update "//string[@name]" -v "${{ secrets.ANYCHART_LICENSE_KEY }}" app/src/main/res/values/license.xml
       - name: set up JDK 17
         uses: actions/setup-java@v4
         with:
