--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,7 +19,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: set up JDK 17
+      - name: Set AnyChart license
+        run: |
+          sed -i 's/AnyChartLicenseKey=\(.*\)/AnyChartLicenseKey=${{ secrets.ANYCHART_LICENSE_KEY }}/' gradle.properties
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
