--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Setup build tool version variable
         shell: bash
         run: |
-          BUILD_TOOLS_VERSION=$(ls $BUILD_TOOLS_HOME | grep 34)
+          BUILD_TOOLS_VERSION=$(ls $BUILD_TOOLS_HOME | grep 34 | tail -1)
           echo "BUILD_TOOLS_PATH=$BUILD_TOOLS_HOME/$BUILD_TOOLS_VERSION" >> $GITHUB_ENV
       - name: Sign APK
         run: |
