Added fastlane files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ google-services.json
 
 # Android Profiling
 *.hprof
+/fastlane/README.md
+/fastlane/report.xml
+/fastlane/metadata/android/screenshots.html
