Read permissions for action

--- a/.github/workflows/storeListing.yml
+++ b/.github/workflows/storeListing.yml
@@ -3,6 +3,9 @@ name: Update store listing
 on:
   workflow_dispatch:
 
+permissions:
+  contents: read
+
 jobs:
   update_listing:
     runs-on: ubuntu-latest
