--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -44,6 +44,8 @@ jobs:
           restore-keys: ${{ runner.os }}-gradle
       - name: Run unit tests
         run: ./gradlew test createDebugCoverageReport
+      - name: Run fuzzing tests
+        run: ./gradlew test -Dfuzzing=true
       - name: Android lint
         run: ./gradlew lint
       - name: Build
@@ -82,6 +84,7 @@ jobs:
             --ks-pass pass:${{ secrets.SIGNING_KEYSTORE_PASSWORD }} --key-pass pass:${{ secrets.SIGNING_ALIAS_PASSWORD }} \
             --out $APK_RELEASE_DIRECTORY/MedTimer-release-signed.apk \
             $APK_RELEASE_DIRECTORY/MedTimer-release-unsigned.apk
+          rm $APK_RELEASE_DIRECTORY/MedTimer-release-unsigned.apk
         continue-on-error: true
       - name: Upload App Package
         if: startsWith(github.ref, 'refs/tags/v')
