Use orchestrator also with gcloud

--- a/.github/workflows/firebaseTest.yml
+++ b/.github/workflows/firebaseTest.yml
@@ -37,6 +37,6 @@ jobs:
       - name: Set current project
         run: gcloud config set project medtimer-60cc6
       - name: Run Instrumentation Tests in Firebase Test Lab
-        run: gcloud firebase test android run tests.yml:medium-phone-arm
+        run: gcloud firebase test android run tests.yml:medium-phone-arm --use-orchestrator --environment-variables clearPackageData=true
       - name: Run Robo Tests in Firebase Test Lab
         run: gcloud firebase test android run robo.yml:medium-phone-arm
