Layout adaptions for landscape mode Also use a tablet for testing in landscape mode

--- a/tests.yml
+++ b/tests.yml
@@ -7,3 +7,7 @@ medium-phone-arm:
       version: 34
       locale: 'en'
       orientation: portrait
+    - model: MediumTablet.arm
+      version: 34
+      locale: 'de'
+      orientation: landscape
